# grpc_image_augmentation

./: README.rst  client  pyproject.toml  server  setup  start_terminal
src/image_manipulation/: client.py  communication_utils.py  image_pb2.py  image_pb2_grpc.py  image_utils.py  server.py
src/image_manipulation/grpc_pb/: .image_pb2_grpc.py.swp
tests/: test_communication.py  test_end_to_end.py  test_image_manipulation.py
tests/.cache/v/cache/: lastfailed
